<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="Robot_Control_Variables" Id="{6b13a4a4-77b0-48c5-9e19-6f3ea678454b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Base_Angle_Setpoint : INT; // [deg]
	Shoulder_Angle_Setpoint : INT; // [deg]
	Elbow_Angle_Setpoint : INT; // [deg]
	Base_Current_Angle : INT; // [deg]
	Shoulder_Current_Angle : INT; // [deg]
	Elbow_Current_Angle : INT; // [deg]
	Joint_Ramp_Speed : INT; // [deg/s]
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>